--- a/templates/backup2l.conf.erb
+++ b/templates/backup2l.conf.erb
@@ -126,7 +126,7 @@ AUTORUN=0
 SIZE_UNITS=""    # set to "B", "K", "M" or "G" to obtain unified units in summary list
 
 # Remove this line after the setup is finished.
-UNCONFIGURED=1
+#UNCONFIGURED=1
 
 # Archive driver for new backups (default = "DRIVER_TAR_GZ")
 #CREATE_DRIVER="DRIVER_TAR_BZ2"
