Finalized process Added RSSH as restrictet shell for backupuser (rsync only configuration) Some fixes

--- a/templates/prebackup.sh.erb
+++ b/templates/prebackup.sh.erb
@@ -1,5 +1,6 @@
 #!/bin/bash
-chown -R backup. <%= scope.lookupvar('backup2l::userhome') -%>
+chown -R backup. <%= scope.lookupvar('backup2l::userhome') -%>/
+
 #THIS WILL BE THE PRE BACKUP SCRIPT, MOSTLY FOR MYSQL DUMP AND SIMILAR
 #
 #
